// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page Converter oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "data": Object {
    "content": undefined,
  },
  "key": "mockKey",
  "nodes": Array [
    Object {
      "componentOboToSlateReturnFor": Object {
        "nodes": Array [
          Object {
            "type": "mockNode",
          },
        ],
        "type": "oboeditor.component",
      },
    },
  ],
  "object": "block",
  "type": "mockType",
}
`;

exports[`Page Converter slateToObo converts a Slate node to an OboNode 1`] = `
Object {
  "children": Array [
    Object {
      "componentSlateToOboReturnFor": Object {
        "nodes": Array [
          Object {
            "type": "mockNode",
          },
        ],
        "type": "oboeditor.component",
      },
    },
  ],
  "content": Object {},
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`Page Converter slateToObo converts a Slate node to an OboNode with no content 1`] = `
Object {
  "children": Array [
    Object {
      "componentSlateToOboReturnFor": Object {
        "nodes": Array [
          Object {
            "type": "mockNode",
          },
        ],
        "type": "oboeditor.component",
      },
    },
  ],
  "id": "mockKey",
  "type": "mockType",
}
`;
